fixed menu alignment

--- a/stupid.css
+++ b/stupid.css
@@ -184,10 +184,10 @@ select:hover, input:not([type]):hover, [type=text]:hover, [type=password]:hover,
 /**** dropdown menu from http://codepen.io/philhoyt/pen/ujHzd ***/
 ul.menu {list-style:none; position:relative; margin:0; padding:0}
 ul.menu.right {float:right}
-ul.menu a {display:block; padding:0 15px; text-decoration:none;text-align:left;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; text-align:left}
+ul.menu a {padding:0 15px; text-decoration:none;text-align:left;font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; text-align:left}
 ul.menu li {position:relative; float:left; margin:0; padding:0}
 ul.menu ul {background:white; border:1px solid #e1e1e1; visibility:hidden; opacity:0;  position:absolute; top:110%; padding:0; z-index:1000; transition:all 0.2s ease-out; list-style-type:none; box-shadow:0.3em 0.3em 1em #666}
-ul.menu ul a {padding:10px 15px; color:#333; font-weight:700; font-size:12px; line-height:16px}
+ul.menu ul a {padding:10px 15px; color:#333; font-weight:700; font-size:12px; line-height:16px; display: block}
 ul.menu ul li {float:none; width:200px}
 ul.menu ul ul {top:0; left:80%; z-index:2000}
 ul.menu li:hover > ul {visibility:visible; opacity:1}
